--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+img {
+    width: 100%;
+}
+
 .mt-2 {
     margin-top: 30px;
+    margin-bottom: 50PX;
+}
+
+.imgFestDetails {
+    width: 300px;
+}
+
+.FestivalDetails {
+    margin-bottom: 50px;
+}
+
+.festivalName {
+    margin: 100px 0;
 }
