EditionDetailsPage almost done

--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,8 @@ img {
     width: 300px;
 }
 
-.FestivalDetails {
-    margin-bottom: 50px;
+Container {
+    margin-bottom: 200px;
 }
 
 .festivalName {
