--- a/src/components/NewFestivalForm/NewFestivalForm.css
+++ b/src/components/NewFestivalForm/NewFestivalForm.css
@@ -6,7 +6,11 @@
     margin: 20px auto;
 }
 
-.d-grid {
+.descriptionNewFestival {
+    height: 150px;
+}
+
+.buttonCreate {
     margin: 20px auto;
 }
 
