--- a/src/pages/EditionDetailsPage/EditionDetailsPage.css
+++ b/src/pages/EditionDetailsPage/EditionDetailsPage.css
@@ -1,3 +1,40 @@
 .EditionDetailsPage {
-    margin: 200px auto;
+    margin: 100px auto;
+}
+
+.infoEditionDetails {
+    display: flex;
+    justify-content: space-between;
+}
+
+.ticketsTitle {
+    text-align: center;
+}
+
+.sponsorCardsContainer {
+    display: flex;
+    justify-content: space-between;
+    margin: 30px auto;
+}
+
+.carouselEditionDetails {
+    margin: 30px auto;
+}
+
+.imgCarouselEditionDetails {
+    width: auto;
+    height: 600px;
+    text-align: center;
+}
+
+.imgCarouselEditionDetails img {
+    width: 1200px;
+    height: 700px;
+    object-fit: cover;
+}
+
+.backButton {
+    width: 150px;
+    height: 50px;
+    font-size: 1.2em;
 }
