--- a/src/pages/FestivalDetailsPage/FestivalDetailsPage.css
+++ b/src/pages/FestivalDetailsPage/FestivalDetailsPage.css
@@ -35,6 +35,19 @@
     border-bottom: 1px solid rgb(209, 208, 208);
 }
 
+.editionCardContainerFestivalDetailsPage {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+.editionCardFestivalDetailsPage {
+    width: 30%;
+    border: none;
+}
+
 .buttonContainer {
     display: flex;
     justify-content: space-evenly;
