--- a/src/App.css
+++ b/src/App.css
@@ -13,5 +13,16 @@ h1 {
     font-weight: 700;
     text-align: center;
     margin-bottom: 50px;
+}
 
+button {
+    width: 150px;
+    height: 50px;
+    font-size: 1.2em;
+    margin: 20px;
+}
+
+.buttonCreate {
+    display: flex;
+    justify-content: end;
 }
