--- a/src/components/EditionCard/EditionCard.css
+++ b/src/components/EditionCard/EditionCard.css
@@ -1,6 +1,7 @@
 .EditionCard {
     overflow: hidden;
     margin: 10px auto;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .imgContainerEditionCard {
