--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,9 +4,8 @@
     align-items: center;
     background-color: black;
     color: white;
-    /* position: fixed; */
+    position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-
 }
