--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -2,11 +2,5 @@
     width: 100%;
     display: flex;
     justify-content: flex-end;
-}
-
-.SearchBar input {
-
-    border-radius: 6px;
-    width: 30%;
-    margin: 5px;
+    margin-bottom: 20px;
 }
