--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -6,25 +6,27 @@
     font-size: 5em;
 }
 
-.CarouselHomePage {
+/* .CarouselHomePage {
     width: auto;
     height: 600px;
     text-align: center;
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
-}
+} */
 
+/* 
 .imgCarouselHomePage img {
     width: auto;
     height: 600px;
     object-fit: cover;
-}
+} */
 
 .cardContainerHomePage {
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 40px;
+    text-decoration: none;
 }
 
 .CardsHomePage {
@@ -37,4 +39,5 @@
     border: .5px solid gray;
     border-bottom-left-radius: 1cap;
     border-bottom-right-radius: 1cap;
+    text-decoration: none;
 }
